// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the composed room with agreement-library off leaves a record-only variant in Wave 1's read-only card 1`] = `
<div>
  <p
    data-testid="room-count"
  >
    0 of 1 parts need attention
  </p>
  <button>
    Review & send
  </button>
  <div
    class="mx-auto max-w-[1240px] px-6 py-7 sm:px-8"
  >
    <header
      class="border-b border-[var(--doc-ink-border)] pb-5"
    >
      <p
        class="font-mono text-[11px] uppercase tracking-[0.12em] text-[var(--color-clay-ink)]"
      >
        Yes to the designer · professional services only
      </p>
      <div
        class="mt-1 flex flex-wrap items-end justify-between gap-4"
      >
        <div>
          <h1
            class="font-heading text-[1.65rem] text-[var(--color-charcoal)]"
          >
            Okafor design agreement
          </h1>
          <p
            class="mt-1 max-w-2xl text-[12.5px] leading-relaxed text-[var(--color-mocha)]"
          >
            Compose the parts this agreement is made of. Furnishings and purchasing stay outside it.
          </p>
        </div>
        <div
          class="flex flex-wrap items-center gap-3"
        >
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Preview client copy
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Return to the seven facets
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-[var(--accent-primary)] text-[var(--bg-primary)] hover:bg-[var(--accent-hover)] px-[1.6rem] py-[0.7rem]"
            disabled=""
            type="button"
          >
            Saved
          </button>
        </div>
      </div>
      <div
        class="mt-4 max-w-sm"
      >
        <p
          class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
        >
          Client account
        </p>
        <div
          data-testid="client-picker"
        />
      </div>
    </header>
    <div
      class="grid gap-9 pt-7 min-[1180px]:grid-cols-[260px_minmax(0,1fr)_320px]"
    >
      <nav
        aria-label="Agreement parts"
        class="space-y-3"
      >
        <ul
          class="border-t border-[var(--doc-ink-border)]"
        >
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-4"
                aria-disabled="false"
                aria-label="Reorder Cost plus"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                aria-current="true"
                class="flex-1 text-left text-[var(--color-charcoal)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Cost plus
                </span>
                <span
                  class="block text-[13px]"
                >
                  Cost plus
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Cost plus"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
        </ul>
        <div
          id="DndDescribedBy-4"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-4"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
        />
        <div
          class="relative"
        >
          <button
            aria-expanded="false"
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
            type="button"
          >
            + Add a part
          </button>
        </div>
      </nav>
      <div>
        <section
          aria-label="Cost plus editor"
          class="space-y-4"
        >
          <header>
            <p
              class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
            >
              Cost plus
            </p>
            <h2
              class="mt-1 font-heading text-[1.25rem] italic text-[var(--color-charcoal)]"
            >
              Cost plus
            </h2>
          </header>
          <div
            class="border border-[var(--doc-ink-border)] px-4 py-3"
          >
            <p
              class="font-mono text-[11px] uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
            >
              schedule
               · cost_plus
            </p>
            <p
              class="mt-2 text-[12.5px] leading-relaxed text-[var(--color-mocha)]"
            >
              This part opens in a later release. It stays on the agreement exactly as it is, and the client sees it in place.
            </p>
          </div>
        </section>
      </div>
      <aside
        class="space-y-6"
      >
        <section
          aria-label="Agreement readiness"
          class="border-t border-[var(--doc-ink-border)] pt-4"
        >
          <p
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
          >
            0
             of 
            1
             parts need attention
          </p>
          <ul
            class="mt-3 space-y-1.5 text-[12px] leading-relaxed text-[var(--color-mocha)]"
          >
            <li>
              This agreement names no fee. Add a rate card, a flat fee, or a per-phase fee.
            </li>
          </ul>
        </section>
        <div
          class="hidden min-[1180px]:block"
        >
          <div
            class="sticky top-[82px] rounded-[8px] border border-[var(--doc-ink-border)] bg-white px-5 py-5"
          >
            <p
              class="mb-4 font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
            >
              The client's copy · live
            </p>
            <div>
              Agreement preview
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</div>
`;

exports[`the composed room with agreement-library off renders the flat-fee editor exactly as Wave 1 shipped 1`] = `
<div>
  <p
    data-testid="room-count"
  >
    0 of 1 parts need attention
  </p>
  <button>
    Review & send
  </button>
  <div
    class="mx-auto max-w-[1240px] px-6 py-7 sm:px-8"
  >
    <header
      class="border-b border-[var(--doc-ink-border)] pb-5"
    >
      <p
        class="font-mono text-[11px] uppercase tracking-[0.12em] text-[var(--color-clay-ink)]"
      >
        Yes to the designer · professional services only
      </p>
      <div
        class="mt-1 flex flex-wrap items-end justify-between gap-4"
      >
        <div>
          <h1
            class="font-heading text-[1.65rem] text-[var(--color-charcoal)]"
          >
            Okafor design agreement
          </h1>
          <p
            class="mt-1 max-w-2xl text-[12.5px] leading-relaxed text-[var(--color-mocha)]"
          >
            Compose the parts this agreement is made of. Furnishings and purchasing stay outside it.
          </p>
        </div>
        <div
          class="flex flex-wrap items-center gap-3"
        >
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Preview client copy
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Return to the seven facets
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-[var(--accent-primary)] text-[var(--bg-primary)] hover:bg-[var(--accent-hover)] px-[1.6rem] py-[0.7rem]"
            disabled=""
            type="button"
          >
            Saved
          </button>
        </div>
      </div>
      <div
        class="mt-4 max-w-sm"
      >
        <p
          class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
        >
          Client account
        </p>
        <div
          data-testid="client-picker"
        />
      </div>
    </header>
    <div
      class="grid gap-9 pt-7 min-[1180px]:grid-cols-[260px_minmax(0,1fr)_320px]"
    >
      <nav
        aria-label="Agreement parts"
        class="space-y-3"
      >
        <ul
          class="border-t border-[var(--doc-ink-border)]"
        >
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-1"
                aria-disabled="false"
                aria-label="Reorder Flat fee"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                aria-current="true"
                class="flex-1 text-left text-[var(--color-charcoal)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Flat fee
                </span>
                <span
                  class="block text-[13px]"
                >
                  Flat fee
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Flat fee"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
        </ul>
        <div
          id="DndDescribedBy-1"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-1"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
        />
        <div
          class="relative"
        >
          <button
            aria-expanded="false"
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
            type="button"
          >
            + Add a part
          </button>
        </div>
      </nav>
      <div>
        <section
          aria-label="Flat fee editor"
          class="space-y-4"
        >
          <header>
            <p
              class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
            >
              Flat fee
            </p>
            <h2
              class="mt-1 font-heading text-[1.25rem] italic text-[var(--color-charcoal)]"
            >
              Flat fee
            </h2>
          </header>
          <label
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
          >
            Flat fee · dollars
            <input
              class="flex w-full rounded-[3px] border border-[var(--border-default)] bg-[var(--bg-surface)] px-3 py-2 text-[0.85rem] text-[var(--text-primary)] placeholder:text-[var(--text-muted)] focus:outline-none focus:border-[var(--accent-primary)] focus:ring-1 focus:ring-[var(--accent-primary)] disabled:opacity-50 mt-2 max-w-[220px]"
              inputmode="decimal"
              style="font-family: var(--font-body);"
              value="8000"
            />
            <p
              class="mt-1.5 text-[11px] normal-case tracking-normal text-[var(--text-muted)]"
            >
              Recorded on the agreement now; it starts creating billing authority in a later release.
            </p>
          </label>
        </section>
      </div>
      <aside
        class="space-y-6"
      >
        <section
          aria-label="Agreement readiness"
          class="border-t border-[var(--doc-ink-border)] pt-4"
        >
          <p
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
          >
            0
             of 
            1
             parts need attention
          </p>
        </section>
        <div
          class="hidden min-[1180px]:block"
        >
          <div
            class="sticky top-[82px] rounded-[8px] border border-[var(--doc-ink-border)] bg-white px-5 py-5"
          >
            <p
              class="mb-4 font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
            >
              The client's copy · live
            </p>
            <div>
              Agreement preview
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</div>
`;

exports[`the composed room with agreement-library off renders the furnishings-deposit editor exactly as Wave 1 shipped 1`] = `
<div>
  <p
    data-testid="room-count"
  >
    0 of 1 parts need attention
  </p>
  <button>
    Review & send
  </button>
  <div
    class="mx-auto max-w-[1240px] px-6 py-7 sm:px-8"
  >
    <header
      class="border-b border-[var(--doc-ink-border)] pb-5"
    >
      <p
        class="font-mono text-[11px] uppercase tracking-[0.12em] text-[var(--color-clay-ink)]"
      >
        Yes to the designer · professional services only
      </p>
      <div
        class="mt-1 flex flex-wrap items-end justify-between gap-4"
      >
        <div>
          <h1
            class="font-heading text-[1.65rem] text-[var(--color-charcoal)]"
          >
            Okafor design agreement
          </h1>
          <p
            class="mt-1 max-w-2xl text-[12.5px] leading-relaxed text-[var(--color-mocha)]"
          >
            Compose the parts this agreement is made of. Furnishings and purchasing stay outside it.
          </p>
        </div>
        <div
          class="flex flex-wrap items-center gap-3"
        >
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Preview client copy
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Return to the seven facets
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-[var(--accent-primary)] text-[var(--bg-primary)] hover:bg-[var(--accent-hover)] px-[1.6rem] py-[0.7rem]"
            disabled=""
            type="button"
          >
            Saved
          </button>
        </div>
      </div>
      <div
        class="mt-4 max-w-sm"
      >
        <p
          class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
        >
          Client account
        </p>
        <div
          data-testid="client-picker"
        />
      </div>
    </header>
    <div
      class="grid gap-9 pt-7 min-[1180px]:grid-cols-[260px_minmax(0,1fr)_320px]"
    >
      <nav
        aria-label="Agreement parts"
        class="space-y-3"
      >
        <ul
          class="border-t border-[var(--doc-ink-border)]"
        >
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-3"
                aria-disabled="false"
                aria-label="Reorder Furnishings deposit"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                aria-current="true"
                class="flex-1 text-left text-[var(--color-charcoal)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Furnishings deposit
                </span>
                <span
                  class="block text-[13px]"
                >
                  Furnishings deposit
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Furnishings deposit"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
        </ul>
        <div
          id="DndDescribedBy-3"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-3"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
        />
        <div
          class="relative"
        >
          <button
            aria-expanded="false"
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
            type="button"
          >
            + Add a part
          </button>
        </div>
      </nav>
      <div>
        <section
          aria-label="Furnishings deposit editor"
          class="space-y-4"
        >
          <header>
            <p
              class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
            >
              Furnishings deposit
            </p>
            <h2
              class="mt-1 font-heading text-[1.25rem] italic text-[var(--color-charcoal)]"
            >
              Furnishings deposit
            </h2>
          </header>
          <div
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
          >
            Furnishings deposit · on each authorization
            <div
              class="mt-2 flex flex-wrap items-center gap-2 normal-case tracking-normal"
            >
              <button
                aria-pressed="false"
                class="rounded-[3px] border px-3 py-1.5 text-[12px] transition-colors border-[var(--doc-ink-border)] text-[var(--color-charcoal)] hover:border-[var(--color-clay)]"
                type="button"
              >
                0
                %
              </button>
              <button
                aria-pressed="false"
                class="rounded-[3px] border px-3 py-1.5 text-[12px] transition-colors border-[var(--doc-ink-border)] text-[var(--color-charcoal)] hover:border-[var(--color-clay)]"
                type="button"
              >
                25
                %
              </button>
              <button
                aria-pressed="true"
                class="rounded-[3px] border px-3 py-1.5 text-[12px] transition-colors border-[var(--color-clay)] bg-[var(--color-clay)] text-white"
                type="button"
              >
                50
                %
              </button>
              <button
                aria-pressed="false"
                class="rounded-[3px] border px-3 py-1.5 text-[12px] transition-colors border-[var(--doc-ink-border)] text-[var(--color-charcoal)] hover:border-[var(--color-clay)]"
                type="button"
              >
                100
                %
              </button>
              <label
                class="flex items-center gap-1.5 text-[12px] text-[var(--color-charcoal)]"
              >
                <span>
                  Other
                </span>
                <input
                  aria-label="Other furnishings deposit percent"
                  class="flex rounded-[3px] border border-[var(--border-default)] bg-[var(--bg-surface)] px-3 py-2 text-[0.85rem] text-[var(--text-primary)] placeholder:text-[var(--text-muted)] focus:outline-none focus:border-[var(--accent-primary)] focus:ring-1 focus:ring-[var(--accent-primary)] disabled:opacity-50 w-20"
                  inputmode="numeric"
                  placeholder="Unset · defaults to 50%"
                  style="font-family: var(--font-body);"
                  value=""
                />
              </label>
            </div>
          </div>
        </section>
      </div>
      <aside
        class="space-y-6"
      >
        <section
          aria-label="Agreement readiness"
          class="border-t border-[var(--doc-ink-border)] pt-4"
        >
          <p
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
          >
            0
             of 
            1
             parts need attention
          </p>
          <ul
            class="mt-3 space-y-1.5 text-[12px] leading-relaxed text-[var(--color-mocha)]"
          >
            <li>
              This agreement names no fee. Add a rate card, a flat fee, or a per-phase fee.
            </li>
          </ul>
        </section>
        <div
          class="hidden min-[1180px]:block"
        >
          <div
            class="sticky top-[82px] rounded-[8px] border border-[var(--doc-ink-border)] bg-white px-5 py-5"
          >
            <p
              class="mb-4 font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
            >
              The client's copy · live
            </p>
            <div>
              Agreement preview
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</div>
`;

exports[`the composed room with agreement-library off renders the per-phase editor exactly as Wave 1 shipped 1`] = `
<div>
  <p
    data-testid="room-count"
  >
    0 of 1 parts need attention
  </p>
  <button>
    Review & send
  </button>
  <div
    class="mx-auto max-w-[1240px] px-6 py-7 sm:px-8"
  >
    <header
      class="border-b border-[var(--doc-ink-border)] pb-5"
    >
      <p
        class="font-mono text-[11px] uppercase tracking-[0.12em] text-[var(--color-clay-ink)]"
      >
        Yes to the designer · professional services only
      </p>
      <div
        class="mt-1 flex flex-wrap items-end justify-between gap-4"
      >
        <div>
          <h1
            class="font-heading text-[1.65rem] text-[var(--color-charcoal)]"
          >
            Okafor design agreement
          </h1>
          <p
            class="mt-1 max-w-2xl text-[12.5px] leading-relaxed text-[var(--color-mocha)]"
          >
            Compose the parts this agreement is made of. Furnishings and purchasing stay outside it.
          </p>
        </div>
        <div
          class="flex flex-wrap items-center gap-3"
        >
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Preview client copy
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Return to the seven facets
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-[var(--accent-primary)] text-[var(--bg-primary)] hover:bg-[var(--accent-hover)] px-[1.6rem] py-[0.7rem]"
            disabled=""
            type="button"
          >
            Saved
          </button>
        </div>
      </div>
      <div
        class="mt-4 max-w-sm"
      >
        <p
          class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
        >
          Client account
        </p>
        <div
          data-testid="client-picker"
        />
      </div>
    </header>
    <div
      class="grid gap-9 pt-7 min-[1180px]:grid-cols-[260px_minmax(0,1fr)_320px]"
    >
      <nav
        aria-label="Agreement parts"
        class="space-y-3"
      >
        <ul
          class="border-t border-[var(--doc-ink-border)]"
        >
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-2"
                aria-disabled="false"
                aria-label="Reorder Fee by phase"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                aria-current="true"
                class="flex-1 text-left text-[var(--color-charcoal)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Fee by phase
                </span>
                <span
                  class="block text-[13px]"
                >
                  Fee by phase
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Fee by phase"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
        </ul>
        <div
          id="DndDescribedBy-2"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-2"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
        />
        <div
          class="relative"
        >
          <button
            aria-expanded="false"
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
            type="button"
          >
            + Add a part
          </button>
        </div>
      </nav>
      <div>
        <section
          aria-label="Fee by phase editor"
          class="space-y-4"
        >
          <header>
            <p
              class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
            >
              Fee by phase
            </p>
            <h2
              class="mt-1 font-heading text-[1.25rem] italic text-[var(--color-charcoal)]"
            >
              Fee by phase
            </h2>
          </header>
          <div
            class="space-y-2"
          >
            <div
              class="grid grid-cols-[minmax(0,1fr)_140px_auto] gap-3"
            >
              <input
                aria-label="Phase 1"
                class="flex w-full rounded-[3px] border border-[var(--border-default)] bg-[var(--bg-surface)] px-3 py-2 text-[0.85rem] text-[var(--text-primary)] placeholder:text-[var(--text-muted)] focus:outline-none focus:border-[var(--accent-primary)] focus:ring-1 focus:ring-[var(--accent-primary)] disabled:opacity-50"
                placeholder="Concept development"
                style="font-family: var(--font-body);"
                value="Concept"
              />
              <input
                aria-label="Phase 1 fee"
                class="flex w-full rounded-[3px] border border-[var(--border-default)] bg-[var(--bg-surface)] px-3 py-2 text-[0.85rem] text-[var(--text-primary)] placeholder:text-[var(--text-muted)] focus:outline-none focus:border-[var(--accent-primary)] focus:ring-1 focus:ring-[var(--accent-primary)] disabled:opacity-50"
                inputmode="decimal"
                placeholder="$"
                style="font-family: var(--font-body);"
                value="3500"
              />
              <button
                class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
                type="button"
              >
                Remove
              </button>
            </div>
            <div
              class="grid grid-cols-[minmax(0,1fr)_140px_auto] gap-3"
            >
              <input
                aria-label="Phase 2"
                class="flex w-full rounded-[3px] border border-[var(--border-default)] bg-[var(--bg-surface)] px-3 py-2 text-[0.85rem] text-[var(--text-primary)] placeholder:text-[var(--text-muted)] focus:outline-none focus:border-[var(--accent-primary)] focus:ring-1 focus:ring-[var(--accent-primary)] disabled:opacity-50"
                placeholder="Concept development"
                style="font-family: var(--font-body);"
                value="Documentation"
              />
              <input
                aria-label="Phase 2 fee"
                class="flex w-full rounded-[3px] border border-[var(--border-default)] bg-[var(--bg-surface)] px-3 py-2 text-[0.85rem] text-[var(--text-primary)] placeholder:text-[var(--text-muted)] focus:outline-none focus:border-[var(--accent-primary)] focus:ring-1 focus:ring-[var(--accent-primary)] disabled:opacity-50"
                inputmode="decimal"
                placeholder="$"
                style="font-family: var(--font-body);"
                value="4500"
              />
              <button
                class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
                type="button"
              >
                Remove
              </button>
            </div>
            <button
              class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
              type="button"
            >
              + Add a phase
            </button>
            <p
              class="text-[11px] normal-case tracking-normal text-[var(--text-muted)]"
            >
              Recorded on the agreement now; it starts creating billing authority in a later release.
            </p>
          </div>
        </section>
      </div>
      <aside
        class="space-y-6"
      >
        <section
          aria-label="Agreement readiness"
          class="border-t border-[var(--doc-ink-border)] pt-4"
        >
          <p
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
          >
            0
             of 
            1
             parts need attention
          </p>
        </section>
        <div
          class="hidden min-[1180px]:block"
        >
          <div
            class="sticky top-[82px] rounded-[8px] border border-[var(--doc-ink-border)] bg-white px-5 py-5"
          >
            <p
              class="mb-4 font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
            >
              The client's copy · live
            </p>
            <div>
              Agreement preview
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</div>
`;

exports[`the composed room with agreement-library off renders the rail and the standard parts exactly as Wave 1 shipped 1`] = `
<div>
  <p
    data-testid="room-count"
  >
    0 of 7 parts need attention
  </p>
  <button>
    Review & send
  </button>
  <div
    class="mx-auto max-w-[1240px] px-6 py-7 sm:px-8"
  >
    <header
      class="border-b border-[var(--doc-ink-border)] pb-5"
    >
      <p
        class="font-mono text-[11px] uppercase tracking-[0.12em] text-[var(--color-clay-ink)]"
      >
        Yes to the designer · professional services only
      </p>
      <div
        class="mt-1 flex flex-wrap items-end justify-between gap-4"
      >
        <div>
          <h1
            class="font-heading text-[1.65rem] text-[var(--color-charcoal)]"
          >
            Okafor design agreement
          </h1>
          <p
            class="mt-1 max-w-2xl text-[12.5px] leading-relaxed text-[var(--color-mocha)]"
          >
            Compose the parts this agreement is made of. Furnishings and purchasing stay outside it.
          </p>
        </div>
        <div
          class="flex flex-wrap items-center gap-3"
        >
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Preview client copy
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent border border-[var(--border-default)] text-[var(--text-primary)] hover:bg-[var(--bg-hover)] px-[1.6rem] py-[0.7rem]"
            type="button"
          >
            Return to the seven facets
          </button>
          <button
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-[var(--accent-primary)] text-[var(--bg-primary)] hover:bg-[var(--accent-hover)] px-[1.6rem] py-[0.7rem]"
            disabled=""
            type="button"
          >
            Saved
          </button>
        </div>
      </div>
      <div
        class="mt-4 max-w-sm"
      >
        <p
          class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
        >
          Client account
        </p>
        <div
          data-testid="client-picker"
        />
      </div>
    </header>
    <div
      class="grid gap-9 pt-7 min-[1180px]:grid-cols-[260px_minmax(0,1fr)_320px]"
    >
      <nav
        aria-label="Agreement parts"
        class="space-y-3"
      >
        <ul
          class="border-t border-[var(--doc-ink-border)]"
        >
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-label="Reorder Services"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                aria-current="true"
                class="flex-1 text-left text-[var(--color-charcoal)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Clause
                </span>
                <span
                  class="block text-[13px]"
                >
                  Services
                  <span
                    aria-label="Required"
                    class="ml-1.5 text-[var(--color-clay-ink)]"
                    title="Required"
                  >
                    ·
                  </span>
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Services"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-label="Reorder Deliverables"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                class="flex-1 text-left text-[var(--color-mocha)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  List
                </span>
                <span
                  class="block text-[13px]"
                >
                  Deliverables
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Deliverables"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-label="Reorder Role rates"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                class="flex-1 text-left text-[var(--color-mocha)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Role rates
                   · creates authority
                </span>
                <span
                  class="block text-[13px]"
                >
                  Role rates
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Role rates"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-label="Reorder Ceiling"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                class="flex-1 text-left text-[var(--color-mocha)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Ceiling
                   · creates authority
                </span>
                <span
                  class="block text-[13px]"
                >
                  Ceiling
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Ceiling"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-label="Reorder Retainer"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                class="flex-1 text-left text-[var(--color-mocha)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Retainer
                   · creates authority
                </span>
                <span
                  class="block text-[13px]"
                >
                  Retainer
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Retainer"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-label="Reorder Billing cadence"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                class="flex-1 text-left text-[var(--color-mocha)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Billing cadence
                   · creates authority
                </span>
                <span
                  class="block text-[13px]"
                >
                  Billing cadence
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Billing cadence"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
          <li
            class="border-b border-[var(--doc-ink-border)]"
          >
            <div
              class="flex items-center gap-2 py-2"
            >
              <button
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-label="Reorder Terms"
                aria-roledescription="sortable"
                class="cursor-grab px-1 font-mono text-[12px] text-[var(--text-faint)] disabled:cursor-default"
                role="button"
                tabindex="0"
                type="button"
              >
                ⠿
              </button>
              <button
                class="flex-1 text-left text-[var(--color-mocha)]"
                type="button"
              >
                <span
                  class="block font-mono text-[10.5px] uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
                >
                  Clause
                </span>
                <span
                  class="block text-[13px]"
                >
                  Terms
                  <span
                    aria-label="Required"
                    class="ml-1.5 text-[var(--color-clay-ink)]"
                    title="Required"
                  >
                    ·
                  </span>
                </span>
              </button>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-label="Part options for Terms"
                  class="px-2 font-mono text-[13px] text-[var(--color-aged-oak)]"
                  type="button"
                >
                  ⋯
                </button>
              </div>
            </div>
          </li>
        </ul>
        <div
          id="DndDescribedBy-0"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-0"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
        />
        <div
          class="relative"
        >
          <button
            aria-expanded="false"
            class="type-btn-text inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-[3px] cursor-pointer transition-all disabled:cursor-not-allowed disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--accent-primary)] focus-visible:ring-offset-1 bg-transparent text-[var(--text-muted)] hover:text-[var(--text-primary)] px-4 py-[0.45rem] text-[0.78rem]"
            type="button"
          >
            + Add a part
          </button>
        </div>
      </nav>
      <div>
        <section
          aria-label="Services editor"
          class="space-y-4"
        >
          <header>
            <p
              class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
            >
              Clause
            </p>
            <h2
              class="mt-1 font-heading text-[1.25rem] italic text-[var(--color-charcoal)]"
            >
              Services
            </h2>
          </header>
          <label
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.08em] text-[var(--color-aged-oak)]"
          >
            Body
            <textarea
              class="flex w-full rounded-[3px] border border-[var(--border-default)] bg-[var(--bg-surface)] px-3 py-2 text-[0.85rem] text-[var(--text-primary)] placeholder:text-[var(--text-muted)] focus:outline-none focus:border-[var(--accent-primary)] focus:ring-1 focus:ring-[var(--accent-primary)] disabled:opacity-50 mt-2 min-h-40 normal-case tracking-normal"
              placeholder="The language the client reads and signs."
              style="font-family: var(--font-body);"
            >
              Interior design services.
            </textarea>
          </label>
        </section>
      </div>
      <aside
        class="space-y-6"
      >
        <section
          aria-label="Agreement readiness"
          class="border-t border-[var(--doc-ink-border)] pt-4"
        >
          <p
            class="font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
          >
            0
             of 
            7
             parts need attention
          </p>
        </section>
        <div
          class="hidden min-[1180px]:block"
        >
          <div
            class="sticky top-[82px] rounded-[8px] border border-[var(--doc-ink-border)] bg-white px-5 py-5"
          >
            <p
              class="mb-4 font-mono text-[11px] font-semibold uppercase tracking-[0.1em] text-[var(--color-aged-oak)]"
            >
              The client's copy · live
            </p>
            <div>
              Agreement preview
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</div>
`;
